# irrlicht-game

./: .gitignore  CMakeLists.txt  Makefile  README.md  camera.cpp  camera.hpp  enemy.cpp  main.cpp  player.hpp
data/: arena999.pk3  arena999custom.pk3  base_textured.pk3  level.json  myfont.xml  sword.mtl  waves.json
data/enemies/: 2.pcx  3.pcx  5.pcx  6.pcx
data/models/: 1.pcx  4.pcx
src/: WaveManager.cpp  WaveManager.h  camera.cpp  camera.hpp  computer.cpp  computer.hpp  enemy.cpp  enemy.hpp  events.cpp  events.hpp  level.hpp  loot.cpp  loot.hpp  main.cpp  player.cpp  player.hpp  playerbar.cpp  playerbar.hpp  score.cpp  score.hpp  spawnPoint.cpp  spawnPoint.hpp  sword.cpp  sword.hpp  utils.cpp  utils.hpp
src/entity/: enemy.cpp  enemy.hpp  player.cpp  player.hpp
src/ia/: WaveManager.cpp  WaveManager.h  computer.cpp  computer.hpp  level.cpp  level.hpp  waveGenerator.cpp  waveGenerator.hpp
src/item/: loot.cpp  loot.hpp  sun.cpp  sun.hpp  sword.cpp  sword.hpp  upgrade.cpp  upgrade.hpp
src/ui/: cursor.cpp  cursor.hpp  playerbar.cpp  playerbar.hpp  score.cpp  score.hpp
